--- a/speech.html
+++ b/speech.html
@@ -1,7 +1,12 @@
+
 <!DOCTYPE html>
+
 <html>
 <body>
-<p id ="text"></p>
-<script src = "speech.js"></script>
+
+<p id="text"></p>
+
+<script	src = "speech.js">
+</script>
 </body>
-</html
+</html>
